--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+#Maven files
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -10,3 +11,10 @@ buildNumber.properties
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
+
+
+#Eclipse files
+.project
+.DS_Store
+.classpath
+.settings/
